[gd_scene load_steps=5 format=3 uid="uid://cfjfuw6wyryem"]

[ext_resource type="Script" path="res://Scenes/Settings/settings_page.gd" id="1_bin2c"]
[ext_resource type="PackedScene" uid="uid://c1elbstqwdf4s" path="res://Scenes/OptionButton/option_button.tscn" id="2_fogls"]

[sub_resource type="InputEventAction" id="InputEventAction_iyhxx"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_enlro"]
events = [SubResource("InputEventAction_iyhxx")]

[node name="SettingsPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bin2c")

[node name="Background" type="Panel" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="NativeConfirmationDialog" type="NativeConfirmationDialog" parent="."]

[node name="Tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="General" type="Control" parent="Tabs"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="Tabs/General"]
visible = false
layout_mode = 1
offset_left = 852.0
offset_top = 336.0
offset_right = 806.0
offset_bottom = 659.0
scale = Vector2(0.5, 0.5)
alignment = 1
edit_alpha = false
picker_shape = 2
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="OptionDarkTheme" parent="Tabs/General" instance=ExtResource("2_fogls")]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 115.0
offset_bottom = 51.0
text = "Dark theme"

[node name="OptionColorTheme" parent="Tabs/General" instance=ExtResource("2_fogls")]
layout_mode = 2
offset_left = 25.0
offset_top = 69.0
offset_right = 115.0
offset_bottom = 95.0
text = "Color theme"

[node name="CheckButton" parent="Tabs/General/OptionColorTheme" index="0"]
disabled = true

[node name="OptionButton" parent="Tabs/General" instance=ExtResource("2_fogls")]
layout_mode = 0
offset_left = 25.0
offset_top = 115.0
offset_right = 259.0
offset_bottom = 141.0
text = "Automatically hide service bar"

[node name="CheckButton" parent="Tabs/General/OptionButton" index="0"]
tooltip_text = "Creates a button"

[node name="Account" type="Control" parent="Tabs"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="Tabs/Account"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 33.0
offset_bottom = 50.0
text = "Change user color"

[node name="DeleteAccountButton" type="Button" parent="Tabs/Account"]
layout_mode = 0
offset_left = 25.0
offset_top = 75.0
offset_right = 150.0
offset_bottom = 106.0
text = "Delete account"

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_enlro")
text = "‚ùå "
flat = true
text_overrun_behavior = 1

[connection signal="confirmed" from="NativeConfirmationDialog" to="." method="_on_native_confirmation_dialog_confirmed"]
[connection signal="color_changed" from="Tabs/General/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="toggled" from="Tabs/General/OptionDarkTheme/CheckButton" to="." method="_on_dark_theme_button_toggled"]
[connection signal="toggled" from="Tabs/General/OptionColorTheme/CheckButton" to="." method="_on_color_theme_button_toggled"]
[connection signal="toggled" from="Tabs/General/OptionButton/CheckButton" to="." method="_on_optin_autoresize_button_toggled"]
[connection signal="pressed" from="Tabs/Account/DeleteAccountButton" to="." method="_on_delete_account_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="Tabs/General/OptionDarkTheme"]
[editable path="Tabs/General/OptionColorTheme"]
[editable path="Tabs/General/OptionButton"]
